# soccer-cam

./: .actignore  .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  VideoGrouperService.spec  VideoGrouperTray.spec  build-installer.ps1  build_native_loader.py  config.ini  create_icon.py  demo_wizard_ui.py  docker-compose.simulator-test.yaml  docker-compose.yaml  download_reolink_game.py  process_with_ntfy.py  pyproject.toml  requirements-test.txt  run.py  run_simulator_test.ps1  serve_viewer.py  setup.py  stop_simulator_test.ps1  test_ntfy_send.py  test_playmetrics.py  test_unified_ntfy_state.py  tile_gaps.json
.claude/: settings.json
.claude/commands/: audit.md  cancel-ralph.md  code-simplifier.md  commit-push.md  progress.md  queue.md  ralph-loop.md  restart-worker.md  verify-app.md  verify.md  worker-status.md
.claude/hooks/: stop-hook.sh
.github/: dependabot.yml
.github/workflows/: build-docker.yml  build-firmware-patcher.yml  build-native-loader.yml  build-windows-service.yml  create-release.yml  lint.yml
annotation-app/: settings.gradle.kts
annotation-app/app/: build.gradle.kts
annotation-tool/: main.py  requirements.txt  test_main.py  video_annotation_tool.py
docs/: ADDING_A_CAMERA.md  DATA_FLOW.md  GETTING_STARTED.md  HARDWARE_SETUP.md  ONNX_MODELS.md  REOLINK_FIRMWARE_PATCH.md  TROUBLESHOOTING.md  VIRTUAL_CAMERA.md
ios-port-prep/: .gitignore  MAC_HANDOFF.md  PHASE_0_KICKOFF.md  README.md
ios-port-prep/design/: README.md  app_store_plan.md  app_ui.md  architecture.md  cryptokit_decryption.md  data_model.md  metal_warp_shader.md  reolink_segment_ingest.md  segment_pipeline.md  swift_camera_state_machine.md  swift_kalman_tracker.md  swift_projection_math.md  ttt_api_integration.md
ios-port-prep/golden/: README.md
ios-port-prep/models/: README.md
ios-port-prep/sources/: README.md
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
mobile/assets/: ball_track.json  dewarp_viewer.html
mobile/integration_test/: camera_emulator_e2e_test.dart  pipeline_e2e_test.dart
mobile/lib/: app.dart  main.dart  main_dewarp_test.dart
reolink-firmware-patching/: .gitattributes  .gitignore  README.md  _camera_env.sh  camera.env.example
reolink-firmware-patching/builds/: BUILD_LOG.md  build_bitrate_cap.sh  build_fps_cap.sh  build_http_unlock.sh  build_netstate.sh  build_recordgate.sh  build_soccercam_comprehensive.sh  build_soccercam_v2.sh
reolink-firmware-patching/docs/: FIRMWARE_PATCH_NOTES.md  PATCHING_GUIDE.md  RECORD_GATE_DESIGN.md
reolink-firmware-patching/pak/: README.md  extract.py  pak.py  pak_repack.py  reolink_crc.py
reolink-firmware-patching/recover/: recover_mp4.c
reolink-firmware-patching/runtime/: check_isp.sh  probe_isp.sh  set_exposure.sh
reolink-firmware-patching/verify/: dump_encoder_config.sh  fetch_and_analyze.sh  get_performance.sh  test_recover_mp4.sh  test_setenc.sh
reolink-firmware-patching/winbuild/: .gitignore  README.md  patch_firmware.py  patch_firmware.spec
scripts/: run_parity_harness.py  serve_test_release.py  smoke_full_pipeline.py  smoke_moment_reel_pipeline.py  smoke_real_service.py
shared_data_simulator/: config.ini
simulator/: Dockerfile  pyproject.toml  server.py  storage.py  web_ui.py
simulator/dahua/: http_api.py
simulator/reolink/: baichuan_server.py  bcmedia_encoder.py  crypto.py  http_api.py
simulator/templates/: index.html
tests/: __init__.py  conftest.py  test_annotation_server.py  test_audio_padding.py  test_autocam_automation.py  test_autocam_output_validation.py  test_autocam_processor.py  test_autocam_resume.py  test_autocam_task.py  test_ball_detector_inference.py  test_ball_select_step.py  test_ball_selector_numpy.py  test_ball_tracker_inference.py  test_ball_tracking_autocam_gui.py  test_ball_tracking_homegrown.py  test_ball_tracking_license_state.py  test_ball_tracking_processor.py  test_ball_tracking_registry.py  test_ball_tracking_secure_loader.py  test_ball_tracking_task.py  test_base_queue_processor.py  test_base_task_processor.py  test_camera_config.py  test_camera_discovery.py  test_camera_planner.py  test_camera_poller.py  test_clip_request_processor.py  test_clip_tasks.py  test_cloud_sync.py  test_combine_task_sidecar.py  test_command_executor.py  test_community_loader.py  test_config.ini  test_config_command_line.py  test_configurable_end_trim.py  test_connected_filtering.py  test_corrupt_recovery.py  test_cylindrical_view.py  test_dahua_camera.py  test_detect_field_filter.py  (+128 more)
tests/camera_emulator/: Dockerfile  dahua_handler.py  file_generator.py  reolink_handler.py  server.py
tests/e2e/: README.md  TODO.md  __init__.py  conftest.py  e2e_dahua_emulator_config.ini  e2e_test_config.ini  inspect_autocam.py  inspect_processing_setup.py  inspect_settings_window.py  kill_test_processes.py  run_e2e_tests.py  run_onboarding_visual_test.py  test_clip_request_e2e.py  test_runner.py
tests/integration/: __init__.py  test_autocam_upload_integration.py  test_camera_emulator.py  (+9 more)
tools/: migrate_autocam_to_ball_tracking.py  polygon_blend_compare.py  rotation_strength_compare.py  seam_remap_benchmark.py  stab_experiments.py  stabilization_compare.py  strength_compare.py
training/: ROADMAP.md  THINGS_TO_TRY.md  annotation_server.py  calibrate_confidence.py  correction_ingester.py  evaluate.py  export_mobile.py  field_edit_v2.py  game_windows_api.py  label_qa_cache.py  label_qa_prep.py  label_qa_report.py  label_qa_spot_check.py  review_packet_generator.py  temporal_dataset.py  train.py  train_temporal.py  train_v3.py  train_v4.py  train_v4_heatmap.py
video_grouper/: Dockerfile  LICENSE  README.docker.md  __init__.py  __main__.py  autocam_automation.py  config.ini.dist  directory_state.py  ffmpeg_utils.py  file_state.py  installer.nsi  locking.py  match_info.ini.dist  models.py  paths.py  requirements.txt  run.py  service_wrapper.py  setup.py  time_utils.py  tray_agent.py  update_manager.py  version.py  video_grouper.py  video_grouper_app.py  video_grouper_onvif.py  youtube_upload.py
(+561 files in other folders)
