[project]
name = "video-grouper"
version = "0.1.0"
description = "A tool to automatically group and process video files from a security camera."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "pytz>=2024.1",
    "pywinauto>=0.6.8",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.31.0",
    "icalendar>=6.3.1",
    "beautifulsoup4>=4.13.4",
    "cryptography>=42.0.0",
    "pydantic>=2.11.7",
    "tenacity>=8.2.3",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
]

[project.optional-dependencies]
tray = [
    "PyQt6>=6.6.0",
    "pywin32>=306",
]
service = [
    "pywin32>=306",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-qt>=4.2.0",
    "ruff>=0.5.5",
    "pre-commit>=3.7.1",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/test_service.py" = ["E402"] 
