[project]
name = "video-grouper"
version = "0.1.0"
description = "A tool to automatically group and process video files from a security camera."
authors = [
    {name = "Mark Blakley", email = "mark.blakley@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "pytz>=2024.1",
    "pywinauto>=0.6.8",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.31.0",
    "icalendar>=6.3.1",
    "beautifulsoup4>=4.13.4",
    "cryptography>=42.0.0",
    "pydantic>=2.11.7",
    "tenacity>=8.2.3",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "pycryptodome>=3.20.0",
    "pillow>=11.3.0",
    "ultralytics>=8.4.27",
    "onnxruntime-gpu>=1.24.4; sys_platform == 'win32'",
    "uvicorn>=0.42.0",
    "fastapi>=0.135.2",
    "av>=17.0.0",
]

[project.optional-dependencies]
metrics = [
    "psutil>=5.9.0",
]
tray = [
    "PyQt6>=6.6.0",
    "pywin32>=306",
]
service = [
    "pywin32>=306",
]
dev = [
    "pyqt6>=6.9.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-qt>=4.2.0",
    "ruff>=0.5.5",
    "pre-commit>=3.7.1",
    "pyinstaller>=6.0.0",
]
ml = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.70",
    "opencv-python>=4.13.0",
    "numpy>=2.2.0",
    "supervision>=0.26.0",
    "lapx>=0.5.0",
    "filterpy>=1.4.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/test_service.py" = ["E402"] 

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]
asyncio_mode = "strict" 

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
