[project]
name = "video-grouper"
dynamic = ["version"]
description = "A tool to automatically group and process video files from a security camera."
authors = [
    {name = "Mark Blakley", email = "mark.blakley@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "pytz>=2024.1",
    "pywinauto>=0.6.8",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.31.0",
    "icalendar>=6.3.1",
    "beautifulsoup4>=4.13.4",
    "cryptography>=42.0.0",
    "pydantic>=2.11.7",
    "tenacity>=8.2.3",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "pycryptodome>=3.20.0",
    "pillow>=11.3.0",
    "numpy>=2.2.0",
    "opencv-python-headless>=4.13.0",
    "onnxruntime-gpu>=1.24.4",
    "uvicorn>=0.42.0",
    "fastapi>=0.135.2",
    "python-multipart>=0.0.9",
    "av>=17.0.0",
]

[project.optional-dependencies]
metrics = [
    "psutil>=5.9.0",
]
tray = [
    "PyQt6>=6.6.0",
    # The tray parents + monitors the AutoCam process (tray/autocam_automation.py imports
    # psutil at module top level), so psutil is a tray runtime dependency, not just metrics.
    "psutil>=5.9.0",
    "pywin32>=306",
]
service = [
    "pywin32>=306",
]
dev = [
    "pyqt6>=6.9.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-qt>=4.2.0",
    "ruff>=0.5.5",
    "pre-commit>=3.7.1",
    "pyinstaller>=6.0.0",
    "cython>=3.0.0",
    "setuptools>=70.0.0",
]
# Optional GPU warp acceleration for the broadcast renderer. The cv2 backend is the
# default and needs nothing here; install this for the zero-copy OpenCL render backend
# (render_backend="opencl"), which is faster on integrated GPUs. Falls back to cv2 if
# absent or no OpenCL device is present.
render-gpu = [
    "pyopencl>=2024.1",
]
# Training-only extras. The core `[project] dependencies` already covers
# the inference path (onnxruntime-gpu + opencv-python-headless + numpy +
# av + pillow), so end-user installs don't need this.
ml = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.4.27",
    "supervision>=0.26.0",
    "lapx>=0.5.0",
    "filterpy>=1.4.5",
    "scipy>=1.13",
    "onnx>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "video_grouper/version.py"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Enable a curated set of rules — matches TTT backend config style.
# - E4/E7/E9: pycodestyle errors (imports, statement, syntax)
# - F:       Pyflakes (undefined names, unused imports/vars)
# - B:       flake8-bugbear (likely-buggy patterns)
# - I:       isort (import sorting)
# - C4:      flake8-comprehensions (clearer comprehensions)
# - UP:      pyupgrade (modern Python idioms; py313 target)
select = ["E4", "E7", "E9", "F", "B", "I", "C4", "UP"]
ignore = [
    # B008: function-call-as-default — FastAPI/Pydantic Depends(), Field() rely on this idiom.
    "B008",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/test_service.py" = ["E402"]
# Tests/e2e inspect_* are interactive window-dumper scripts; their EnumWindows
# callbacks are invoked synchronously so the closure-over-loop-var pattern is
# safe, but ruff's B023 can't see that.
"tests/e2e/inspect_*.py" = ["B023"]
# Training is research/experiment code (per memory [Scope experiments tight]).
# B007 unused loop var, B023 lambda-over-loop-var, UP031 percent format are
# fine for short-lived experimental scripts; not worth churning.
"training/**/*.py" = ["B007", "B023", "UP031"]
# Firmware reverse-engineering scripts: short-lived debug tools, percent
# format is fine.
"reolink-firmware-patching/**/*.py" = ["UP031"]

[tool.mypy]
# Type-check video_grouper/ as the production target. tools/ is one-off
# scripts and training/ is research code -- not in scope for this baseline.
python_version = "3.13"
# Production runs on Windows (tray, service, AutoCam parenting). Pinning
# the platform here means mypy sees winreg + pywin32-shaped stdlib stubs
# even on Linux CI, matching what the code will actually execute against.
# The pyproject [tool.uv] environments list includes linux too, but the
# linux variant is for Docker / dev only and shares the same type surface.
platform = "win32"
strict_optional = true
warn_unused_ignores = true
# Don't require type annotations on every def yet -- that's a separate
# follow-up. The goal here is establishing the gate, not boiling the ocean.
disallow_untyped_defs = false
no_implicit_optional = false
# Stay quiet about ML/CV vendor libs whose stubs are incomplete; the rest
# of the modules below are listed by name so we don't accidentally silence
# typos in our own imports.
exclude = [
    "tools/",
    "training/",
    "reolink-firmware-patching/",
    "scripts/",
]

# --- Third-party modules without stubs ---
# Listed explicitly per memory feedback: name the modules so a typo in our
# own import doesn't get silently swallowed by a blanket ignore.

# Computer-vision and ML stack
[[tool.mypy.overrides]]
module = [
    "cv2",
    "cv2.*",
    "onnxruntime",
    "onnxruntime.*",
    "torch",
    "torch.*",
    "torchvision",
    "torchvision.*",
    "ultralytics",
    "ultralytics.*",
    "supervision",
    "supervision.*",
    "av",
    "av.*",
    "lapx",
    "lapx.*",
    "filterpy",
    "filterpy.*",
    "pyopencl",
    "pyopencl.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

# Windows-only / pywin32 modules (Linux CI can't see them, and pywin32
# ships no PEP 561 marker so they appear untyped on Windows too).
# Includes the winreg stdlib module which only exists on Windows.
[[tool.mypy.overrides]]
module = [
    "winreg",
    "win32event",
    "win32service",
    "win32serviceutil",
    "win32timezone",
    "win32gui",
    "win32con",
    "win32api",
    "win32process",
    "servicemanager",
    "pywintypes",
    "pythoncom",
    "pywinauto",
    "pywinauto.*",
]
ignore_missing_imports = true

# PyQt6 -- optional tray dep, not installed in the CI lint container
[[tool.mypy.overrides]]
module = [
    "PyQt6",
    "PyQt6.*",
]
ignore_missing_imports = true

# Google APIs (no stubs published)
[[tool.mypy.overrides]]
module = [
    "google",
    "google.*",
    "googleapiclient",
    "googleapiclient.*",
    "google_auth_oauthlib",
    "google_auth_oauthlib.*",
]
ignore_missing_imports = true

# Misc third-party deps without stubs
[[tool.mypy.overrides]]
module = [
    "aiofiles",
    "aiofiles.*",
    "dateutil",
    "dateutil.*",
    "psutil",
    "pytz",
    "requests",
    "requests.*",
    "selenium",
    "selenium.*",
    "webdriver_manager",
    "webdriver_manager.*",
    "icalendar",
    "icalendar.*",
    "Crypto",
    "Crypto.*",
    "tenacity",
    "tenacity.*",
]
ignore_missing_imports = true

# --- Deferred per-module type-fix work ---
# These modules have pre-existing type errors (mostly Optional/None
# threaded through constructor signatures, missing collection annotations,
# and TypedDict drift). The plan is to reclaim them module-by-module
# under a separate "type-cleanup" track so new code in CLEAN modules
# stays gated, but we don't block the infrastructure rollout on a
# 283-error backlog. Each module here is a follow-up task.
[[tool.mypy.overrides]]
module = [
    "video_grouper.api_integrations.cloud_sync",
    "video_grouper.api_integrations.command_executor",
    "video_grouper.api_integrations.mock_ntfy_api",
    "video_grouper.api_integrations.mock_ntfy_communication",
    "video_grouper.api_integrations.mock_playmetrics",
    "video_grouper.api_integrations.mock_ttt_api",
    "video_grouper.api_integrations.ntfy",
    "video_grouper.api_integrations.teamsnap",
    "video_grouper.ball_tracking.providers.homegrown.stages.render",
    "video_grouper.ball_tracking.secure_loader",
    "video_grouper.cameras.base",
    "video_grouper.cameras.dahua",
    "video_grouper.cameras.reolink",
    "video_grouper.cameras.reolink_download",
    "video_grouper.models.directory_state",
    "video_grouper.models.recording_file",
    "video_grouper.task_processors.ball_tracking_processor",
    "video_grouper.task_processors.base_polling_processor",
    "video_grouper.task_processors.base_queue_processor",
    "video_grouper.task_processors.camera_poller",
    "video_grouper.task_processors.clip_request_processor",
    "video_grouper.task_processors.download_processor",
    "video_grouper.task_processors.highlight_reel_processor",
    "video_grouper.task_processors.ntfy_processor",
    "video_grouper.task_processors.register_tasks",
    "video_grouper.task_processors.reprocess_request_processor",
    "video_grouper.task_processors.services.match_info_service",
    "video_grouper.task_processors.services.ntfy_service",
    "video_grouper.task_processors.services.teamsnap_service",
    "video_grouper.task_processors.services.ttt_question_service",
    "video_grouper.task_processors.state_auditor",
    "video_grouper.task_processors.task_registry",
    "video_grouper.task_processors.tasks.ball_tracking.base",
    "video_grouper.task_processors.tasks.clip.clip_request_task",
    "video_grouper.task_processors.tasks.download.dahua_download_task",
    "video_grouper.task_processors.tasks.ntfy.base_ntfy_task",
    "video_grouper.task_processors.tasks.ntfy.game_end_task",
    "video_grouper.task_processors.tasks.ntfy.game_start_task",
    "video_grouper.task_processors.tasks.ntfy.phase_verify_task",
    "video_grouper.task_processors.tasks.ntfy.task_factory",
    "video_grouper.task_processors.tasks.ntfy.team_info_task",
    "video_grouper.task_processors.tasks.ntfy.was_there_a_match_task",
    "video_grouper.task_processors.tasks.ttt.highlight_reel_task",
    "video_grouper.task_processors.tasks.ttt.reprocess_request_task",
    "video_grouper.task_processors.tasks.ttt.ttt_job_task",
    "video_grouper.task_processors.tasks.upload.youtube_upload_task",
    "video_grouper.task_processors.tasks.video.combine_task",
    "video_grouper.task_processors.tasks.video.trim_task",
    "video_grouper.task_processors.ttt_job_processor",
    "video_grouper.task_processors.ttt_poller",
    "video_grouper.task_processors.upload_processor",
    "video_grouper.task_processors.video_processor",
    "video_grouper.tray.autocam_automation",
    "video_grouper.tray.main",
    "video_grouper.update.update_manager",
    "video_grouper.utils.config",
    "video_grouper.utils.youtube_upload",
    "video_grouper.video_grouper_app",
    "video_grouper.web.auth_server",
    "video_grouper.web.config_editor",
    "video_grouper.web.setup.router",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    # pywinauto ships a docstring with an invalid escape sequence; their
    # bug, not ours -- everything else stays visible.
    "ignore::SyntaxWarning:pywinauto.keyboard",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]
asyncio_mode = "strict" 

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'win32'", "sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "mypy>=2.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
